python-terraform_resources/internetgateway.tf
resource "aws_internet_gateway" "my-igw" {
  vpc_id = aws_vpc.my-vpc.id

  tags = {
    name = "my-igw"
  }
}
